@@ -1,3 +1,6 @@
+27 June 2014: Wouter
+	- so-reuseport is available on BSDs(such as FreeBSD 10) and OS/X.
+
 26 June 2014: Wouter
 	- unbound-control status reports if so-reuseport was successful.
 	- iana portlist updated.
